2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Add --host flag.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Add --external-fetch flag.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_cpu_reset): Don't reset H_REG_MESH_COREID.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_hw_event_callback): Use
	es_send_interrupt () to raise interrupt on remote core in dma message
	mode.
	* esim/esim.c (es_send_interrupt): Implemented.
	* esim/esim.h (es_send_interrupt): Add function prototype.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_set_simcmd): Implemented. Writing a 'one'
	to the register will stop the simulation.
	* epiphany-sim.h (epiphanybf_set_simcmd): Add function prototype.
	* esim/esim.c (es_client_stop_cores): Implemented.
	(es_client_disconnect): Add stop parameter.
	* esim/esim.h (es_client_disconnect): Update function prototype.

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (AS_FOR_TARGET): Don't use in-build-tree host
	assembler when building a Canadian cross.

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (install-esim): Install esim/esim.h.

2015-12-04  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (install-esim): Rename from esim-install. Install
	libesim.so.
	(SIM_EXTRA_CFLAGS): Append -fPIC.
	(SIM_EXTRA_ALL): Build libesim.so.
	(SIM_EXTRA_INSTALL): Append libesim.so.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Change default paramters.
	rows=cols=32. first_core=0x020
	* sim-if.c (sim_esim_have_required_params): Change
	default e-first-core to 0x020.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_addr_translate): Make access to area above end of
	memory mapped registers illegal.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Relax constraints: allow